--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
 </head>
 <body>
+    <!--Header-->
+    <header>Header</header>
+    <!--Main Content-->
+    <main>Main Content</main>
+    <!--Footer-->
+    <footer>Footer</footer>
     
 </body>
 </html>
