--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
-                <li><a href="">home</a></li>
+            <ul id="menu">
+                <li><a href="">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
             </ul>
