--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">x</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -43,7 +43,17 @@
 
 
     <!--Footer-->
-    <footer>Footer</footer>
-    
+    <footer>
+
+        <ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visits our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visits our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/?hl=en" target="_blank" rel="noopener" aria-label="visits our instegram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+
+        </ul>
+    </footer>
+
+    <!--Font awesome link-->
+    <script src="https://kit.fontawesome.com/d86c9e5798.js" crossorigin="anonymous"></script>
 </body>
 </html>
