change the style of the icons

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--Footer-->
     <footer>
 
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visits our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visits our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/?hl=en" target="_blank" rel="noopener" aria-label="visits our instegram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
