--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="visits our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visits our X page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/?hl=en" target="_blank" rel="noopener" aria-label="visits our instegram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
-
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visits our youtube page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
     </footer>
 
