hero image added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+        <section id="hero">
+
+
+        </section>
+    </main>
 
 
     <!--Footer-->
