--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
     <!--Main Content-->
     <main>
         <section id="hero">
-
-
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docks & Pheonix Parg</h3>
+            </div>
         </section>
     </main>
 
