health beniftis sections added with titles

--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
                 <h3>Dublin Docks & Pheonix Parg</h3>
             </div>
         </section>
+        <section id="reasons">
+            <h2>Why love running with us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical"></div>
+                    <div>
+                        <h3>FEEL HEALTHY</h3>
+                        <p></p>
+                    </div>
+                        <h3>FEEL STRONG</h3>
+                        <p></p>
+                    <div></div>
+                <div id="benefits-mental"></div>
+                    <div></div>
+                        <h3>FEEL STRONG</h3>
+                        <p></p>
+                    <div></div>
+                        <h3>GET SOCIAL</h3>
+                        <p></p>
+
+            </div>
+
+        </section>
+
     </main>
 
 
