--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
                 <div id="benefits-physical"></div>
                     <div>
                         <h3>FEEL HEALTHY</h3>
-                        <p></p>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns
+                        calories and can build strength.</p>
                     </div>
                         <h3>FEEL STRONG</h3>
-                        <p></p>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.Running strengthens your heart by pu</p>
                     <div></div>
                 <div id="benefits-mental"></div>
                     <div></div>
                         <h3>FEEL STRONG</h3>
-                        <p></p>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic,
+                        more awake and, yes, happier.</p>
                     <div></div>
                         <h3>GET SOCIAL</h3>
-                        <p></p>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or
+                        low mood, and inspire you to try new events.</p>
 
             </div>
 
