--- a/index.html
+++ b/index.html
@@ -51,23 +51,30 @@
             <div id="benefits">
                 <div id="benefits-physical"></div>
                     <div>
-                        <h3>FEEL HEALTH<span><i class="fa-solid fa-heart-pulse"></i></span></h3>
+                        <h3>FEEL HEALTH<i class="fa-solid fa-heart-pulse"></i></h3>
+                        <hr>
                         <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns
                         calories and can build strength.</p>
                     </div>
-                        <h3>FEEL STRONG<span><i class="fa-solid fa-dumbbell"></i></span></h3> 
-                        
+                    <div>
+                        <h3>FEEL STRONG<i class="fa-solid fa-dumbbell"></i></h3> 
+                        <hr>
                         <p>Running strengthens your heart by pumping blood more effectively through your body.Running strengthens your heart by pu</p>
-                    <div></div>
+                    </div>
                 <div id="benefits-mental"></div>
-                    <div></div>
-                        <h3>FEEL FREE<span><i class="fa-solid fa-brain"></i></span></h3>
+                    <div>
+                        <h3>FEEL FREE<i class="fa-solid fa-brain"></i></h3>
+                        <hr>
                         <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic,
                         more awake and, yes, happier.</p>
-                    <div></div>
-                        <h3>GET SOCIAL<span><i class="fa-solid fa-globe"></i></span></h3>
+                    </div>              
+                    <div>    <h3>GET SOCIAL<i class="fa-solid fa-globe"></i></h3>
+                        <hr>
                         <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or
                         low mood, and inspire you to try new events.</p>
+                    </div>
+                    <div="benefits-iamge"></div> 
+                    
 
             </div>
 
