added circle image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="reasons">
             <h2>Why love running with us?</h2>
             <div id="benefits">
-                <div id="benefits-physical"></div>
+                <div id="benefits-physical">
                     <div>
                         <h3>FEEL HEALTH<i class="fa-solid fa-heart-pulse"></i></h3>
                         <hr>
@@ -61,7 +61,8 @@
                         <hr>
                         <p>Running strengthens your heart by pumping blood more effectively through your body.Running strengthens your heart by pu</p>
                     </div>
-                <div id="benefits-mental"></div>
+                </div>
+                <div id="benefits-mental">
                     <div>
                         <h3>FEEL FREE<i class="fa-solid fa-brain"></i></h3>
                         <hr>
@@ -73,9 +74,10 @@
                         <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or
                         low mood, and inspire you to try new events.</p>
                     </div>
-                    <div="benefits-iamge"></div> 
-                    
-
+                </div>
+                <div id="benefits-image">
+                        <div id="circle-cover-bg"></div>  
+                </div>
             </div>
 
         </section>
