--- a/index.html
+++ b/index.html
@@ -79,8 +79,52 @@
                         <div id="circle-cover-bg"></div>  
                 </div>
             </div>
+    </section>
 
-        </section>
+    <!-- Meet-up time Sections -->
+
+    <section id="meetups">
+        <h2>Meet-up Times</h2>
+        <div id="times">
+            <div>
+                <h3>URBAN</h3>
+                <p>Monday</p>
+                <p>5k</p>
+                <p>The Marker Hotel</p>
+                <p>18:30</p>
+            </div>
+            <div>
+                <h3>TRAIL</h3>
+                <p>Wednesay</p>
+                <p>10k</p>
+                <p>The Pheonix Park</p>
+                <p><18:30/p>
+            </div>
+            <div>
+                <h3>URBAN</h3>
+                <p>Friday</p>
+                <p>10k</p>
+                <p>The Marker Hotel</p>
+                <p>18:30</p>
+            </div>
+            <div>
+                <h3>TRAIL</h3>
+                <p>Saturday</p>
+                <p>10k</p>
+                <p>The Phoenix Park</p>
+                <p>09:30</p>
+            </div>
+            <div>
+                <h3>COFFEE</h3>
+                <p>Saturday</p>
+                <p>OK</p>
+                <p>The Marker Hotel</p>
+                <p>11:30</p>
+            </div>
+        </div>
+
+
+    </section>
 
     </main>
 
