--- a/index.html
+++ b/index.html
@@ -84,38 +84,38 @@
     <!-- Meet-up time Sections -->
 
     <section id="meetups">
-        <h2>Meet-up Times</h2>
+        <h2 class="hidden-heading">Meet-up Times</h2>
         <div id="times">
             <div>
-                <h3>URBAN</h3>
+                <h3>URBAN <i class="fa-solid fa-city"></i></h3>
                 <p>Monday</p>
                 <p>5k</p>
                 <p>The Marker Hotel</p>
                 <p>18:30</p>
             </div>
             <div>
-                <h3>TRAIL</h3>
+                <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
                 <p>Wednesay</p>
                 <p>10k</p>
                 <p>The Pheonix Park</p>
                 <p><18:30/p>
             </div>
             <div>
-                <h3>URBAN</h3>
+                <h3>URBAN <i class="fa-solid fa-city"></i></h3>
                 <p>Friday</p>
                 <p>10k</p>
                 <p>The Marker Hotel</p>
                 <p>18:30</p>
             </div>
             <div>
-                <h3>TRAIL</h3>
+                <h3>TRAIL <i class="fa-solid fa-tree"></i></h3>
                 <p>Saturday</p>
                 <p>10k</p>
                 <p>The Phoenix Park</p>
                 <p>09:30</p>
             </div>
             <div>
-                <h3>COFFEE</h3>
+                <h3>COFFEE <i class="fa-solid fa-mug-saucer"></i></h3>
                 <p>Saturday</p>
                 <p>OK</p>
                 <p>The Marker Hotel</p>
