--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <!--Main Content-->
     <main>
         <section id="gallery"></section>
-             <div id="photos"></div>
+             <div id="photos">
              <img src="assets/images/athletes.webp" alt="Two atheles running">
             <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
             <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
@@ -54,6 +54,7 @@
             <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
             <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
             <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+        </div>
     </main>
 
 
